--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <box class="box bg-blue-500 hover:bg-blue-400 ring-blue-300" tabindex="1">
       2
     </box>
-    <box class="box bg-yellow-500 hover:bg-yellow-400 ring-yellow-300" tabindex="2">
+    <box class="box bg-[darkorange] hover:bg-[orange] ring-[#ffc966]" tabindex="2">
       3
     </box>
   </div>
